CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(XtraGraphComputing)
ADD_DEFINITIONS(-DUSE_LOG -DTIME_RESULTS)


FIND_PACKAGE(OpenMP REQUIRED)

# if(OPENMP_FOUND)
#     message("Found OpenMP")
#     set(CMAKE_C_FLAGS ${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS})
#     set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS})
#     set(CMAKE_EXE_LINKER_FLAGS ${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS})
# endif()

SET(CMAKE_CXX_FLAGS
        "${CMAKE_CXX_FLAGS} -std=c++17 -O3  -fopenmp -march=native")


INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})

ADD_SUBDIRECTORY(cycle)
ADD_SUBDIRECTORY(toolset)
ADD_SUBDIRECTORY(util)
